--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
       verificationSubtitle: "Enter your account ID to continue",
       verifyButton: "Verify Account",
       verifying: "Verifying...",
-      errorMessage: "Invalid ID. Must start with 129 and be 10 digits long",
-      placeholder: "Enter account ID (129xxxxxxx)",
+      errorMessage: "Invalid ID. Click "Get ID" to contact the developer",
+      placeholder: "Enter account ID",
       backToLang: "← Change Language",
       loadingTitle: "CONNECTING...",
       loadingSubtitle: "Please wait while we set up your account",
@@ -419,10 +419,10 @@
       reason2: "⚡ Access real-time market analysis", 
       reason3: "🎯 Unlock 95%+ accuracy predictions",
       reason4: "💎 Enable VIP betting strategies",
-      depositInstruction: "Deposit exactly ₱140 to unlock all premium features and start winning!",
+      depositInstruction: "Deposit exactly ₱160 to unlock all premium features and start winning!",
       contactDeveloperFunds: "Contact Developer",
       backToGame: "← Back to Game",
-      modalErrorMessage: "Your account balance is insufficient to continue using premium signals. Please deposit ₱200 to unlock unlimited access.",
+      modalErrorMessage: "Your account balance is insufficient to continue using premium signals. Please deposit ₱160 to unlock unlimited access.",
       activationPlaceholder: "Enter activation code",
       activateButton: "Activate", 
       getCodeButton: "Get Code",
@@ -438,8 +438,8 @@
       verificationSubtitle: "Введите ID аккаунта для продолжения",
       verifyButton: "Проверить аккаунт",
       verifying: "Проверка...",
-      errorMessage: "Неверный ID. Должен начинаться с 129 и содержать 10 цифр",
-      placeholder: "Введите ID аккаунта (129xxxxxxx)",
+      errorMessage: "Неверный ID. Нажмите "Получить ID" для связи с разработчиком",
+      placeholder: "Введите ID аккаунта",
       backToLang: "← Сменить язык",
       loadingTitle: "ПОДКЛЮЧЕНИЕ...",
       loadingSubtitle: "Пожалуйста, подождите, пока мы настроим ваш аккаунт",
@@ -457,10 +457,10 @@
       reason2: "⚡ Доступ к анализу рынка в реальном времени",
       reason3: "🎯 Разблокировка прогнозов с точностью 95%+",
       reason4: "💎 Включение VIP стратегий ставок",
-      depositInstruction: "Пополните точно на ₱140, чтобы разблокировать все премиум функции и начать выигрывать!",
+      depositInstruction: "Пополните точно на ₱160, чтобы разблокировать все премиум функции и начать выигрывать!",
       contactDeveloperFunds: "Связаться с разработчиком",
       backToGame: "← Назад к игре",
-      modalErrorMessage: "На вашем счету недостаточно средств для продолжения использования премиум сигналов. Пополните на ₱200 для безлимитного доступа.",
+      modalErrorMessage: "На вашем счету недостаточно средств для продолжения использования премиум сигналов. Пополните на ₱160 для безлимитного доступа.",
       activationPlaceholder: "Введите код активации",
       activateButton: "Активировать",
       getCodeButton: "Получить код",
@@ -476,8 +476,8 @@
       verificationSubtitle: "Nhập ID tài khoản để tiếp tục",
       verifyButton: "Xác Minh Tài Khoản",
       verifying: "Đang xác minh...",
-      errorMessage: "ID không hợp lệ. Phải bắt đầu bằng 129 và có 10 chữ số",
-      placeholder: "Nhập ID tài khoản (129xxxxxxx)",
+      errorMessage: "ID không chính xác. Nhấp vào "Nhận ID" để liên hệ với nhà phát triển",
+      placeholder: "Nhập ID tài khoản",
       backToLang: "← Đổi Ngôn Ngữ",
       loadingTitle: "ĐANG KẾT NỐI...",
       loadingSubtitle: "Vui lòng đợi trong khi chúng tôi thiết lập tài khoản của bạn",
@@ -495,10 +495,10 @@
       reason2: "⚡ Truy cập phân tích thị trường thời gian thực",
       reason3: "🎯 Mở khóa dự đoán chính xác 95%+",
       reason4: "💎 Bật chiến lược cược VIP",
-      depositInstruction: "Nạp chính xác ₱140 để mở khóa tất cả tính năng cao cấp và bắt đầu thắng!",
+      depositInstruction: "Nạp chính xác ₱160 để mở khóa tất cả tính năng cao cấp và bắt đầu thắng!",
       contactDeveloperFunds: "Liên hệ nhà phát triển",
       backToGame: "← Quay lại trò chơi",
-      modalErrorMessage: "Số dư tài khoản của bạn không đủ để tiếp tục sử dụng tín hiệu cao cấp. Vui lòng nạp ₱200 để có quyền truy cập không giới hạn.",
+      modalErrorMessage: "Số dư tài khoản của bạn không đủ để tiếp tục sử dụng tín hiệu cao cấp. Vui lòng nạp ₱160 để có quyền truy cập không giới hạn.",
       activationPlaceholder: "Nhập mã kích hoạt",
       activateButton: "Kích hoạt",
       getCodeButton: "Lấy mã",
