--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       verificationSubtitle: "Enter your account ID to continue",
       verifyButton: "Verify Account",
       verifying: "Verifying...",
-      errorMessage: "Invalid ID. Click "Get ID" to contact the developer",
+      errorMessage: "Invalid ID. Click (Get ID) to contact the developer",
       placeholder: "Enter account ID",
       backToLang: "← Change Language",
       loadingTitle: "CONNECTING...",
@@ -438,7 +438,7 @@
       verificationSubtitle: "Введите ID аккаунта для продолжения",
       verifyButton: "Проверить аккаунт",
       verifying: "Проверка...",
-      errorMessage: "Неверный ID. Нажмите "Получить ID" для связи с разработчиком",
+      errorMessage: "Неверный ID. Нажмите (Получить ID) для связи с разработчиком",
       placeholder: "Введите ID аккаунта",
       backToLang: "← Сменить язык",
       loadingTitle: "ПОДКЛЮЧЕНИЕ...",
@@ -476,7 +476,7 @@
       verificationSubtitle: "Nhập ID tài khoản để tiếp tục",
       verifyButton: "Xác Minh Tài Khoản",
       verifying: "Đang xác minh...",
-      errorMessage: "ID không chính xác. Nhấp vào "Nhận ID" để liên hệ với nhà phát triển",
+      errorMessage: "ID không chính xác. Nhấp vào (Nhận ID) để liên hệ với nhà phát triển",
       placeholder: "Nhập ID tài khoản",
       backToLang: "← Đổi Ngôn Ngữ",
       loadingTitle: "ĐANG KẾT NỐI...",
