--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
   // Функция для открытия чата с разработчиком
 function openDeveloperChat() {
   // Замените @your_bot_developer на реальный username разработчика
-  const developerUsername = "TsantosI"; // Здесь укажите username разработчика
+  const developerUsername = "TsantosI_PH_bot"; // Здесь укажите username разработчика
   const prefillMessage = "Hi! I want to get my 1xBet ID ✅";
   const telegramUrl = `https://t.me/${developerUsername}?text=${encodeURIComponent(prefillMessage)}`;
   
